@@ -2038,9 +2038,6 @@ static Image *ReadOnePNGImage(MngInfo *mng_info,
     x_resolution,
     y_resolution;
 
-  unsigned char
-    *ping_pixels;
-
   ssize_t
     ping_rowbytes,
     y;
@@ -2064,6 +2061,9 @@ static Image *ReadOnePNGImage(MngInfo *mng_info,
 
   ssize_t
     j;
+
+  volatile unsigned char
+    *ping_pixels;
 
 #ifdef PNG_UNKNOWN_CHUNKS_SUPPORTED
   png_byte unused_chunks[]=
