@@ -1,6 +1,8 @@
 2012-10-07  6.8.0-0 Cristy  <quetzlzacatenango@image...>
   * Check -fx expression early to prevent fault.
   * Performance boast for iOS / Android requires a SO major version increment.
+  * Corrupt PNG image could cause a memory leak (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22024).
 
 2012-10-06  6.7.9-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.9-10, SVN revision 9514.
